# Model-Regression-Detection-System

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: eval.yml
data/: golden_dataset.json
prompts/: v1.yaml  v2.yaml
src/regression_detector/: alert.py  classifier.py  cli.py  config.py  dataset.py  diff.py  drift.py  judge.py  models.py  provider.py  report.py  runner.py  scoring.py  storage.py
src/regression_detector/templates/: report.html.j2
tests/: test_alert.py  test_classifier.py  test_cli.py  test_config.py  test_dataset.py  test_diff.py  test_drift.py  test_judge.py  test_models.py  test_provider.py  test_report.py  test_runner.py  test_scoring.py  test_smoke.py  test_storage.py
