[project]
name = "regression-detector"
version = "0.1.0"
description = "CI/CD regression detection for LLM-powered features"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
regression-eval = "regression_detector.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regression_detector = ["templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
